Mejorasen el cálculo